--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 	<artifactId>test-spark-mllib</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-  <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.10.RELEASE</version>
-    </parent>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.5.10.RELEASE</version>
+	</parent>
 
 	<repositories>
 		<repository>
@@ -51,38 +51,46 @@
 			<version>1.6.3</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>6.0.7.Final</version>
-		</dependency>
-
+		<dependency> 
+			<groupId>org.hibernate</groupId> 
+			<artifactId>hibernate-validator</artifactId> 
+			<version>6.0.7.Final</version> 
+		</dependency> 
+<!-- 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>1.5.10.RELEASE</version>
+		</dependency> -->
 		<!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 			<version>1.3.2.RELEASE</version>
 		</dependency>
-		
-<!-- 		<dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-            <scope>provided</scope>
-        </dependency> -->
-        
-        <!-- <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency> -->
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <version>2.0.1.Final</version>
+		</dependency>
+
+		<!-- <dependency> <groupId>javax.servlet</groupId> <artifactId>servlet-api</artifactId> 
+			<version>2.5</version> <scope>provided</scope> </dependency> -->
+
+		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-web</artifactId> 
+			<exclusions> <exclusion> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-tomcat</artifactId> 
+			</exclusion> </exclusions> </dependency> -->
 
 	</dependencies>
+	<dependencyManagement>
+    	<dependencies>
+        	<dependency>
+            	<groupId>org.codehaus.janino</groupId>
+            	<artifactId>commons-compiler</artifactId>
+            	<version>2.7.8</version>
+        	</dependency>
+    	</dependencies>
+	</dependencyManagement>
 	<build>
 		<!-- <finalName>test-spark-mllib</finalName> -->
 		<plugins>
